// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PersoPotentielTabs Documentation 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="false"
        className="fr-tabs__tab fr-icon-settings-5-line fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="true"
        className="fr-tabs__tab fr-icon-information-fill fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel border"
    icon="settings-5"
    id="fr-tabpanel-0"
    label="Personnalisation du potentiel"
    role="tabpanel"
    tabIndex={0}
  />
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel border fr-tabs__panel--selected"
    icon="information"
    id="fr-tabpanel-1"
    label="Règles applicables"
    role="tabpanel"
    tabIndex={1}
  >
    <div
      className="p-mb-0"
      data-test="PersoPotentielDoc"
    >
      <ul>
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le statut de la 1.3.3 est \\"non concerné\\".</p>",
            }
          }
        />
        <li
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Pour une collectivité n'ayant ni la compétence PLU, ni l'instruction, ni l'octroi des permis de construire, le score de la 1.3.3 est réduit de 100 %.</p><p>Pour une collectivité ayant au moins 1 des compétences (PLU, instruction ou octroi des permis de construire), le score de la 1.3.3 est réduit de 50 %.</p>",
            }
          }
        />
        <li>
          Nombre de points initial pour cette 
          sous-action
           :
           
          6,7
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PersoPotentielTabs Plusieurs Questions 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-icon-settings-5-fill fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-icon-information-line fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel border fr-tabs__panel--selected"
    icon="settings-5"
    id="fr-tabpanel-0"
    label="Personnalisation du potentiel"
    role="tabpanel"
    tabIndex={0}
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850-200)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850-200)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          <div
            className="relative whitespace-nowrap"
          >
            <span
              className="text-transparent"
            >
              Potentiel réduit : 3,3 points
            </span>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
            >
              Potentiel réduit : 3,3 points
            </div>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
            >
              Potentiel réduit : 3,3 points
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-form-group"
      >
        <fieldset
          className="fr-fieldset !flex-col !items-stretch"
        >
          <div
            className="fr-my-2w"
          >
            <legend
              className="fr-fieldset__legend fr-fieldset__legend--regular !font-bold fr-text--lg"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La collectivité a-t-elle la compétence <b>voirie</b> ?",
                }
              }
            />
            <div
              className="fr-pl-2w"
            >
              <section
                className="fr-accordion fr-mb-3w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="accordion-q1"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-fi-information-fill text-[#0063cb] fr-mr-3v"
                    />
                    En savoir plus
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "Contenu (html) pour l‘onglet Documentation.",
                    }
                  }
                  id="accordion-q1"
                />
              </section>
              <div
                className="flex pl-4 flex-col"
                data-test="reponse"
              >
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q1-c1"
                      onChange={[Function]}
                      type="radio"
                      value="c1"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q1-c1"
                    >
                      Oui, pour l’ensemble de la collectivité
                    </label>
                  </div>
                </div>
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q1-c2"
                      onChange={[Function]}
                      type="radio"
                      value="c2"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q1-c2"
                    >
                      Oui, uniquement sur trottoirs, parkings ou zones d'activités ou  industrielles
                    </label>
                  </div>
                </div>
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q1-c3"
                      onChange={[Function]}
                      type="radio"
                      value="c3"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q1-c3"
                    >
                      Non
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fr-fieldset !flex-col !items-stretch"
        >
          <div
            className="fr-my-2w"
          >
            <legend
              className="fr-fieldset__legend fr-fieldset__legend--regular !font-bold fr-text--lg"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La collectivité a-t-elle conclu <b>des ventes ou des contrats d’utilisation</b> sur les dix dernières années ?",
                }
              }
            />
            <div
              className="fr-pl-2w"
            >
              <div
                className="flex pl-4"
                data-test="reponse"
              >
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q2-oui"
                      onChange={[Function]}
                      type="radio"
                      value="oui"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q2-oui"
                    >
                      Oui
                    </label>
                  </div>
                </div>
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q2-non"
                      onChange={[Function]}
                      type="radio"
                      value="non"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q2-non"
                    >
                      Non
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          className="fr-fieldset !flex-col !items-stretch"
        >
          <div
            className="fr-my-2w"
          >
            <legend
              className="fr-fieldset__legend fr-fieldset__legend--regular !font-bold fr-text--lg"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Quelle est la part de la collectivité dans l’EPCI compétent en matière de <b>politique du logement et cadre de vie ?</b>",
                }
              }
            />
            <div
              className="fr-pl-2w"
            >
              <div
                className="flex pl-4 flex-col"
                data-test="reponse"
              >
                <label
                  className="fr-label"
                  htmlFor="q3"
                >
                  Part en pourcentage
                </label>
                <input
                  className="fr-input"
                  disabled={false}
                  id="q3"
                  max={100}
                  min={0}
                  onChange={[Function]}
                  style={
                    Object {
                      "width": 224,
                    }
                  }
                  type="number"
                  value="60"
                />
              </div>
              <section
                className="fr-accordion fr-mt-2w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="j-q3"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-icon-draft-line text-[#0063cb] fr-mr-3v"
                    />
                    Justifier votre réponse (optionnel)
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  id="j-q3"
                >
                  <div
                    className="flex items-start w-full"
                  >
                    <div
                      className="w-[1px] mr-[-1px]"
                    />
                    <textarea
                      autoFocus={true}
                      className="resize-none w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 fr-input"
                      disabled={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Exemple : Cette compétence est transférée à Nom de la Collectivité par délibération du JJ-MM-AAAA OU Cette compétence est exercée par la collectivité sur 2/3 des communes soit 3/4 de la population"
                      value=""
                    />
                  </div>
                </div>
              </section>
              <section
                className="fr-accordion fr-mt-3w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="accordion-part-q3"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-fi-information-fill text-[#0063cb] fr-mr-3v"
                    />
                    Comment calculer la part ?
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "La part se rapporte au nombre d'habitants (nombre d'habitants de la collectivité / nombre d'habitants de la structure compétente) ou au pouvoir de la collectivité dans la structure compétente (nombre de voix d'élu de la collectivité / nombre de voix total dans l'organe délibératoire de la structure compétente) si cette part est supérieure à celle liée au nombre d'habitants.",
                    }
                  }
                  id="accordion-part-q3"
                />
              </section>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel border"
    icon="information"
    id="fr-tabpanel-1"
    label="Règles applicables"
    role="tabpanel"
    tabIndex={1}
  />
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PersoPotentielTabs Question Binaire 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-icon-settings-5-fill fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-icon-information-line fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel border fr-tabs__panel--selected"
    icon="settings-5"
    id="fr-tabpanel-0"
    label="Personnalisation du potentiel"
    role="tabpanel"
    tabIndex={0}
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850-200)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850-200)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          <div
            className="relative whitespace-nowrap"
          >
            <span
              className="text-transparent"
            >
              Potentiel : 6,7 points
            </span>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
            >
              Potentiel : 6,7 points
            </div>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
            >
              Potentiel : 6,7 points
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-form-group"
      >
        <fieldset
          className="fr-fieldset !flex-col !items-stretch"
        >
          <div
            className="fr-my-2w"
          >
            <legend
              className="fr-fieldset__legend fr-fieldset__legend--regular !font-bold fr-text--lg"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La collectivité a-t-elle conclu <b>des ventes ou des contrats d’utilisation</b> sur les dix dernières années ?",
                }
              }
            />
            <div
              className="fr-pl-2w"
            >
              <div
                className="flex pl-4"
                data-test="reponse"
              >
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q2-oui"
                      onChange={[Function]}
                      type="radio"
                      value="oui"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q2-oui"
                    >
                      Oui
                    </label>
                  </div>
                </div>
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q2-non"
                      onChange={[Function]}
                      type="radio"
                      value="non"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q2-non"
                    >
                      Non
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel border"
    icon="information"
    id="fr-tabpanel-1"
    label="Règles applicables"
    role="tabpanel"
    tabIndex={1}
  />
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PersoPotentielTabs Question Binaire Modifiee 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-icon-settings-5-fill fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-icon-information-line fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel border fr-tabs__panel--selected"
    icon="settings-5"
    id="fr-tabpanel-0"
    label="Personnalisation du potentiel"
    role="tabpanel"
    tabIndex={0}
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850-200)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850-200)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          <div
            className="relative whitespace-nowrap"
          >
            <span
              className="text-transparent"
            >
              Potentiel réduit : 3,3 points
            </span>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
            >
              Potentiel réduit : 3,3 points
            </div>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
            >
              Potentiel réduit : 3,3 points
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-form-group"
      >
        <fieldset
          className="fr-fieldset !flex-col !items-stretch"
        >
          <div
            className="fr-my-2w"
          >
            <legend
              className="fr-fieldset__legend fr-fieldset__legend--regular !font-bold fr-text--lg"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La collectivité a-t-elle conclu <b>des ventes ou des contrats d’utilisation</b> sur les dix dernières années ?",
                }
              }
            />
            <div
              className="fr-pl-2w"
            >
              <div
                className="flex pl-4"
                data-test="reponse"
              />
              <section
                className="fr-accordion fr-mt-2w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="j-q2"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-icon-draft-line text-[#0063cb] fr-mr-3v"
                    />
                    Justifier votre réponse (optionnel)
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  id="j-q2"
                >
                  <div
                    className="flex items-start w-full"
                  >
                    <div
                      className="w-[1px] mr-[-1px]"
                    />
                    <textarea
                      autoFocus={true}
                      className="resize-none w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 fr-input"
                      disabled={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Exemple : Cette compétence est transférée à Nom de la Collectivité par délibération du JJ-MM-AAAA OU Cette compétence est exercée par la collectivité sur 2/3 des communes soit 3/4 de la population"
                      value=""
                    />
                  </div>
                </div>
              </section>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel border"
    icon="information"
    id="fr-tabpanel-1"
    label="Règles applicables"
    role="tabpanel"
    tabIndex={1}
  />
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PersoPotentielTabs Question Choix 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-icon-settings-5-fill fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-icon-information-line fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel border fr-tabs__panel--selected"
    icon="settings-5"
    id="fr-tabpanel-0"
    label="Personnalisation du potentiel"
    role="tabpanel"
    tabIndex={0}
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850-200)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850-200)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          <div
            className="relative whitespace-nowrap"
          >
            <span
              className="text-transparent"
            >
              Potentiel : 6,7 points
            </span>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
            >
              Potentiel : 6,7 points
            </div>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
            >
              Potentiel : 6,7 points
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-form-group"
      >
        <fieldset
          className="fr-fieldset !flex-col !items-stretch"
        >
          <div
            className="fr-my-2w"
          >
            <legend
              className="fr-fieldset__legend fr-fieldset__legend--regular !font-bold fr-text--lg"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La collectivité a-t-elle la compétence <b>voirie</b> ?",
                }
              }
            />
            <div
              className="fr-pl-2w"
            >
              <section
                className="fr-accordion fr-mb-3w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="accordion-q1"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-fi-information-fill text-[#0063cb] fr-mr-3v"
                    />
                    En savoir plus
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "Contenu (html) pour l‘onglet Documentation.",
                    }
                  }
                  id="accordion-q1"
                />
              </section>
              <div
                className="flex pl-4 flex-col"
                data-test="reponse"
              >
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q1-c1"
                      onChange={[Function]}
                      type="radio"
                      value="c1"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q1-c1"
                    >
                      Oui, pour l’ensemble de la collectivité
                    </label>
                  </div>
                </div>
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q1-c2"
                      onChange={[Function]}
                      type="radio"
                      value="c2"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q1-c2"
                    >
                      Oui, uniquement sur trottoirs, parkings ou zones d'activités ou  industrielles
                    </label>
                  </div>
                </div>
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="q1-c3"
                      onChange={[Function]}
                      type="radio"
                      value="c3"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q1-c3"
                    >
                      Non
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel border"
    icon="information"
    id="fr-tabpanel-1"
    label="Règles applicables"
    role="tabpanel"
    tabIndex={1}
  />
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PersoPotentielTabs Question Choix Modifiee 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-icon-settings-5-fill fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-icon-information-line fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel border fr-tabs__panel--selected"
    icon="settings-5"
    id="fr-tabpanel-0"
    label="Personnalisation du potentiel"
    role="tabpanel"
    tabIndex={0}
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850-200)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850-200)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          <div
            className="relative whitespace-nowrap"
          >
            <span
              className="text-transparent"
            >
              Potentiel réduit : 3,3 points
            </span>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
            >
              Potentiel réduit : 3,3 points
            </div>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
            >
              Potentiel réduit : 3,3 points
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-form-group"
      >
        <fieldset
          className="fr-fieldset !flex-col !items-stretch"
        >
          <div
            className="fr-my-2w"
          >
            <legend
              className="fr-fieldset__legend fr-fieldset__legend--regular !font-bold fr-text--lg"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "La collectivité a-t-elle la compétence <b>voirie</b> ?",
                }
              }
            />
            <div
              className="fr-pl-2w"
            >
              <section
                className="fr-accordion fr-mb-3w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="accordion-q1"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-fi-information-fill text-[#0063cb] fr-mr-3v"
                    />
                    En savoir plus
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "Contenu (html) pour l‘onglet Documentation.",
                    }
                  }
                  id="accordion-q1"
                />
              </section>
              <div
                className="flex pl-4 flex-col"
                data-test="reponse"
              >
                <div
                  className="fr-fieldset__element fr-fieldset__element--inline"
                >
                  <div
                    className="fr-radio-group fr-radio-group--sm"
                  >
                    <input
                      checked={true}
                      disabled={false}
                      id="q1-c3"
                      onChange={[Function]}
                      type="radio"
                      value="c3"
                    />
                    <label
                      className="fr-label"
                      htmlFor="q1-c3"
                    >
                      Non
                      <button
                        className="fr-link fr-link--icon-left fr-fi-edit-line fr-ml-3w"
                        onClick={[Function]}
                      >
                        Modifier
                      </button>
                    </label>
                  </div>
                </div>
              </div>
              <section
                className="fr-accordion fr-mt-2w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="j-q1"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-icon-draft-line text-[#0063cb] fr-mr-3v"
                    />
                    Justifier votre réponse (optionnel)
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  id="j-q1"
                >
                  <div
                    className="flex items-start w-full"
                  >
                    <div
                      className="w-[1px] mr-[-1px]"
                    />
                    <textarea
                      autoFocus={true}
                      className="resize-none w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 fr-input"
                      disabled={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Exemple : Cette compétence est transférée à Nom de la Collectivité par délibération du JJ-MM-AAAA OU Cette compétence est exercée par la collectivité sur 2/3 des communes soit 3/4 de la population"
                      value=""
                    />
                  </div>
                </div>
              </section>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel border"
    icon="information"
    id="fr-tabpanel-1"
    label="Règles applicables"
    role="tabpanel"
    tabIndex={1}
  />
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PersoPotentielTabs Question Proportion 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-icon-settings-5-fill fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-icon-information-line fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel border fr-tabs__panel--selected"
    icon="settings-5"
    id="fr-tabpanel-0"
    label="Personnalisation du potentiel"
    role="tabpanel"
    tabIndex={0}
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850-200)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850-200)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          <div
            className="relative whitespace-nowrap"
          >
            <span
              className="text-transparent"
            >
              Potentiel : 6,7 points
            </span>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
            >
              Potentiel : 6,7 points
            </div>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
            >
              Potentiel : 6,7 points
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-form-group"
      >
        <fieldset
          className="fr-fieldset !flex-col !items-stretch"
        >
          <div
            className="fr-my-2w"
          >
            <legend
              className="fr-fieldset__legend fr-fieldset__legend--regular !font-bold fr-text--lg"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Quelle est la part de la collectivité dans l’EPCI compétent en matière de <b>politique du logement et cadre de vie ?</b>",
                }
              }
            />
            <div
              className="fr-pl-2w"
            >
              <div
                className="flex pl-4 flex-col"
                data-test="reponse"
              >
                <label
                  className="fr-label"
                  htmlFor="q3"
                >
                  Part en pourcentage
                </label>
                <input
                  className="fr-input"
                  disabled={false}
                  id="q3"
                  max={100}
                  min={0}
                  onChange={[Function]}
                  style={
                    Object {
                      "width": 224,
                    }
                  }
                  type="number"
                  value=""
                />
              </div>
              <section
                className="fr-accordion fr-mt-3w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="accordion-part-q3"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-fi-information-fill text-[#0063cb] fr-mr-3v"
                    />
                    Comment calculer la part ?
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "La part se rapporte au nombre d'habitants (nombre d'habitants de la collectivité / nombre d'habitants de la structure compétente) ou au pouvoir de la collectivité dans la structure compétente (nombre de voix d'élu de la collectivité / nombre de voix total dans l'organe délibératoire de la structure compétente) si cette part est supérieure à celle liée au nombre d'habitants.",
                    }
                  }
                  id="accordion-part-q3"
                />
              </section>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel border"
    icon="information"
    id="fr-tabpanel-1"
    label="Règles applicables"
    role="tabpanel"
    tabIndex={1}
  />
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PersoPotentielTabs Question Proportion Modifiee 1`] = `
<div
  className="fr-tabs"
>
  <ul
    className="fr-tabs__list"
    role="tablist"
  >
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-0"
        aria-selected="true"
        className="fr-tabs__tab fr-icon-settings-5-fill fr-tabs__tab--icon-left"
        id="fr-tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        Personnalisation du potentiel
      </button>
    </li>
    <li
      role="presentation"
    >
      <button
        aria-controls="fr-tabpanel-1"
        aria-selected="false"
        className="fr-tabs__tab fr-icon-information-line fr-tabs__tab--icon-left"
        id="fr-tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        Règles applicables
      </button>
    </li>
  </ul>
  <div
    aria-labelledby="fr-tab-0"
    className="fr-tabs__panel border fr-tabs__panel--selected"
    icon="settings-5"
    id="fr-tabpanel-0"
    label="Personnalisation du potentiel"
    role="tabpanel"
    tabIndex={0}
  >
    <div
      data-test="PersoPotentielQR"
    >
      <div
        className="fr-highlight"
        style={
          Object {
            "border": "1px solid var(--yellow-moutarde-850-200)",
            "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850-200)",
            "marginLeft": 0,
            "maxWidth": "fit-content",
            "paddingBottom": "1rem",
            "paddingRight": "2rem",
            "paddingTop": "1rem",
          }
        }
      >
        <div
          className="flex items-center"
          data-test="PointsPotentiels"
        >
          <div
            className="relative whitespace-nowrap"
          >
            <span
              className="text-transparent"
            >
              Potentiel réduit : 3,3 points
            </span>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
            >
              Potentiel réduit : 3,3 points
            </div>
            <div
              className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
            >
              Potentiel réduit : 3,3 points
            </div>
          </div>
        </div>
      </div>
      <div
        className="fr-form-group"
      >
        <fieldset
          className="fr-fieldset !flex-col !items-stretch"
        >
          <div
            className="fr-my-2w"
          >
            <legend
              className="fr-fieldset__legend fr-fieldset__legend--regular !font-bold fr-text--lg"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Quelle est la part de la collectivité dans l’EPCI compétent en matière de <b>politique du logement et cadre de vie ?</b>",
                }
              }
            />
            <div
              className="fr-pl-2w"
            >
              <div
                className="flex pl-4 flex-col"
                data-test="reponse"
              >
                <label
                  className="fr-label"
                  htmlFor="q3"
                >
                  Part en pourcentage
                </label>
                <input
                  className="fr-input"
                  disabled={false}
                  id="q3"
                  max={100}
                  min={0}
                  onChange={[Function]}
                  style={
                    Object {
                      "width": 224,
                    }
                  }
                  type="number"
                  value="60"
                />
              </div>
              <section
                className="fr-accordion fr-mt-2w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="j-q3"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-icon-draft-line text-[#0063cb] fr-mr-3v"
                    />
                    Justifier votre réponse (optionnel)
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  id="j-q3"
                >
                  <div
                    className="flex items-start w-full"
                  >
                    <div
                      className="w-[1px] mr-[-1px]"
                    />
                    <textarea
                      autoFocus={true}
                      className="resize-none w-full py-2 px-3 text-sm cursor-text rounded-lg outline outline-offset-0 !outline-1 outline-gray-300 focus:outline-blue-500 fr-input"
                      disabled={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Exemple : Cette compétence est transférée à Nom de la Collectivité par délibération du JJ-MM-AAAA OU Cette compétence est exercée par la collectivité sur 2/3 des communes soit 3/4 de la population"
                      value=""
                    />
                  </div>
                </div>
              </section>
              <section
                className="fr-accordion fr-mt-3w"
              >
                <h3
                  className="fr-accordion__title"
                >
                  <button
                    aria-controls="accordion-part-q3"
                    aria-expanded={false}
                    className="fr-accordion__btn font-normal"
                    onClick={[Function]}
                  >
                    <i
                      className="fr-fi-information-fill text-[#0063cb] fr-mr-3v"
                    />
                    Comment calculer la part ?
                  </button>
                </h3>
                <div
                  className="fr-collapse"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "La part se rapporte au nombre d'habitants (nombre d'habitants de la collectivité / nombre d'habitants de la structure compétente) ou au pouvoir de la collectivité dans la structure compétente (nombre de voix d'élu de la collectivité / nombre de voix total dans l'organe délibératoire de la structure compétente) si cette part est supérieure à celle liée au nombre d'habitants.",
                    }
                  }
                  id="accordion-part-q3"
                />
              </section>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="fr-tab-1"
    className="fr-tabs__panel border"
    icon="information"
    id="fr-tabpanel-1"
    label="Règles applicables"
    role="tabpanel"
    tabIndex={1}
  />
</div>
`;
